apps/sterling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sterling-pdf
  namespace: sterling-pdf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sterling-pdf.f4mily.net
    secretName: sterling-pdf-tls
  rules:
  - host: sterling-pdf.f4mily.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sterling-pdf
            port:
              number: 80
